Chrome OS: Fix the chopped Wi-Fi Network Configuration Dialog

BUG=717946

Review-Url: https://codereview.chromium.org/2871253002
Cr-Commit-Position: refs/heads/master@{#470644}

Former-commit-id: 5163e3b4833463b8e30df21b91a527f7c7297baa